--- a/index.html
+++ b/index.html
@@ -5,8 +5,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Atelier 5</title>
     <link rel="stylesheet" href="styles.css">
+
+    <script src="https://kit.fontawesome.com/ffece73c02.js" crossorigin="anonymous"></script>
 </head>
 <body>
+
+    <header>
+
+        <div class="logo-div">
+            <div class="logo">
+                <p>Travel <span>.</span></p>
+            </div>
+        </div>
+
+        <ul>
+            <li><a href="#">Accueil</a></li>
+            <li><a href="#">Destination</a></li>
+            <li><a href="#">Prix</a></li>
+            <li><a href="#">Revus</a></li>
+        </ul>
+
+        <div class="btn-header">
+            <button class="btn"> 
+                <i class="fa-solid fa-phone"></i>
+                <span>Reserver </span>
+            </button>
+        </div>
+
+    </header>
     
 </body>
 </html>
