Ajout du style pour la banniere

--- a/index.html
+++ b/index.html
@@ -57,12 +57,12 @@
                             <i class="fa-solid fa-play"></i>
                         </div>
                     </div>
-                    <span>Voir le Story</span>
+                    <span>Story</span>
                 </button>
             </div>
 
         </div>
-        
+
     </section>
 </body>
 </html>
