--- a/index.html
+++ b/index.html
@@ -64,5 +64,35 @@
         </div>
 
     </section>
+
+    <section class="destination">
+        <h1 class="titre">Top Destinations</h1>
+
+        <div class="desc-boutton">
+            <p class="small-desc">Lorem, ipsum dolor sit amet  elit <br> Cumque perspiciatis iure voluptatibus 
+                molestias nesciunt excepturi eaque, modi 
+            </p>
+
+            <div class="bouttons">
+                <button>
+                    <i class="fa-solid fa-chevron-left"></i>
+                </button>
+                <button>
+                    <i class="fa-solid fa-chevron-right"></i>
+                </button>
+            </div>
+        </div>
+
+        <div class="galerie">
+            <div class="images">
+                
+                <img src="./images/Dakar.jpeg" alt="">
+                <div class="description">
+                    <h1>Dakar</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quas, unde!</p>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
