Ajout du style pour la deuxieme section et aujout des autres destinations

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
     </section>
 
-    <section class="destination">
+    <section class="destinations">
         <h1 class="titre">Top Destinations</h1>
 
         <div class="desc-boutton">
@@ -77,7 +77,7 @@
                 <button>
                     <i class="fa-solid fa-chevron-left"></i>
                 </button>
-                <button>
+                <button class="seconde">
                     <i class="fa-solid fa-chevron-right"></i>
                 </button>
             </div>
@@ -85,14 +85,53 @@
 
         <div class="galerie">
             <div class="images">
-                
+
                 <img src="./images/Dakar.jpeg" alt="">
                 <div class="description">
                     <h1>Dakar</h1>
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quas, unde!</p>
                 </div>
             </div>
+
+            <div class="images">
+
+                <img src="./images/thies.jpeg" alt="">
+                <div class="description">
+                    <h1>Thies</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quas, unde!</p>
+                </div>
+            </div>
+
+            <div class="images">
+
+                <img src="./images/touba.jpeg" alt="">
+                <div class="description">
+                    <h1>Touba</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quas, unde!</p>
+                </div>
+            </div>
+
+            <div class="images">
+
+                <img src="./images/zic.jpeg" alt="">
+                <div class="description">
+                    <h1>Ziginchor</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quas, unde!</p>
+                </div>
+            </div>
+
+            <div class="images">
+
+                <img src="./images/tiv.jpeg" alt="">
+                <div class="description">
+                    <h1>Tivaoune</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quas, unde!</p>
+                </div>
+            </div>
+
         </div>
     </section>
+
+    
 </body>
 </html>
