Ajout de la troisieme section avec les iles et lac

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                 <img src="./images/Dakar.jpeg" alt="">
                 <div class="description">
                     <h1>Dakar</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quas, unde!</p>
+                    <p>Lorem ipsum dolor sit amet consectetur!</p>
                 </div>
             </div>
 
@@ -98,7 +98,7 @@
                 <img src="./images/thies.jpeg" alt="">
                 <div class="description">
                     <h1>Thies</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quas, unde!</p>
+                    <p>Lorem ipsum dolor sit amet consectetur!</p>
                 </div>
             </div>
 
@@ -107,7 +107,7 @@
                 <img src="./images/touba.jpeg" alt="">
                 <div class="description">
                     <h1>Touba</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quas, unde!</p>
+                    <p>Lorem ipsum dolor sit amet consectetur!</p>
                 </div>
             </div>
 
@@ -116,7 +116,7 @@
                 <img src="./images/zic.jpeg" alt="">
                 <div class="description">
                     <h1>Ziginchor</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quas, unde!</p>
+                    <p>Lorem ipsum dolor sit amet consectetur!</p>
                 </div>
             </div>
 
@@ -125,13 +125,72 @@
                 <img src="./images/tiv.jpeg" alt="">
                 <div class="description">
                     <h1>Tivaoune</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quas, unde!</p>
+                    <p>Lorem ipsum dolor sit amet consectetur!</p>
                 </div>
             </div>
 
         </div>
     </section>
 
-    
+    <section class="best">
+        <h1 class="titre">Explorer les top destinations</h1>
+        <p class="small-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis eligendi provident natus error veniam deleniti dolore consequatur voluptatem accusantium dicta.</p>
+
+        <div class="box-list">
+            <div class="box">
+                <img src="./images/goree.jpeg" alt="">
+                <div class="decription">
+                    <h2>Ile de goree</h2>
+                    <p class="rating"> <i class="fa-solid fa-star"></i> 4.7</p>
+                    <div class="button-description">
+                        <span>
+                            Pour
+                            <strong>
+                                1000 FCFA
+                            </strong>
+                            <button>Cliquez !!!</button>
+                        </span>
+                    </div>
+                </div>
+            </div>
+
+            <div class="box">
+                <img src="./images/saloum.jpeg" alt="">
+                <div class="decription">
+                    <h2>Ile Saloum</h2>
+                    <p class="rating"> <i class="fa-solid fa-star"></i> 4.7</p>
+                    <div class="button-description">
+                        <span>
+                            Pour
+                            <strong>
+                                1000 FCFA
+                            </strong>
+                            <button>Cliquez !!!</button>
+                        </span>
+                    </div>
+                </div>
+            </div>
+
+            <div class="box">
+                <img src="./images/lac.jpeg" alt="">
+                <div class="decription">
+                    <h2>Lac Rose</h2>
+                    <p class="rating"> <i class="fa-solid fa-star"></i> 4.7</p>
+                    <div class="button-description">
+                        <span>
+                            Pour
+                            <strong>
+                                1000 FCFA
+                            </strong>
+                            <button>Cliquez !!!</button>
+                        </span>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+
+    </section>
+
 </body>
 </html>
