Ajout de la section de contact

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
         <div class="box-list">
             <div class="box">
                 <img src="./images/goree.jpeg" alt="">
-                <div class="decription">
+                <div class="description">
                     <h2>Ile de goree</h2>
                     <p class="rating"> <i class="fa-solid fa-star"></i> 4.7</p>
                     <div class="button-description">
@@ -148,15 +148,15 @@
                             <strong>
                                 1000 FCFA
                             </strong>
-                            <button>Cliquez !!!</button>
                         </span>
+                        <button>Cliquez !!!</button>
                     </div>
                 </div>
             </div>
 
             <div class="box">
                 <img src="./images/saloum.jpeg" alt="">
-                <div class="decription">
+                <div class="description">
                     <h2>Ile Saloum</h2>
                     <p class="rating"> <i class="fa-solid fa-star"></i> 4.7</p>
                     <div class="button-description">
@@ -165,15 +165,15 @@
                             <strong>
                                 1000 FCFA
                             </strong>
-                            <button>Cliquez !!!</button>
                         </span>
+                        <button>Cliquez !!!</button>
                     </div>
                 </div>
             </div>
 
             <div class="box">
                 <img src="./images/lac.jpeg" alt="">
-                <div class="decription">
+                <div class="description">
                     <h2>Lac Rose</h2>
                     <p class="rating"> <i class="fa-solid fa-star"></i> 4.7</p>
                     <div class="button-description">
@@ -182,12 +182,32 @@
                             <strong>
                                 1000 FCFA
                             </strong>
-                            <button>Cliquez !!!</button>
                         </span>
+                        <button>Cliquez !!!</button>
                     </div>
                 </div>
             </div>
 
+        </div>
+
+        <div class="view-all">
+            <button class="btn">Voir tout</button>
+        </div>
+
+    </section>
+
+    <section class="email">
+        <h1 class="titre">Inscrivez-vous à notre newsletter</h1>
+
+        <div class="together">
+            <div class="text">
+                <p class="small-desc"> Lorem, ipsum dolor sit <br> amet consectetur adipisicing elit. Exercitationem, voluptatibus natus quae laborum sed consequatur nobis quis dolor expedita eligendi!</p>
+            </div>
+
+            <div class="input">
+                <input type="text" placeholder="Entrez votre email">
+                <button class="btn">Envoyer</button>
+            </div>
         </div>
 
     </section>
