Ajout du footer

--- a/index.html
+++ b/index.html
@@ -212,5 +212,17 @@
 
     </section>
 
+    <footer>
+
+        <div class="logo-div">
+            <div class="logo">
+                <p>Travel <span>.</span></p>
+            </div>
+        </div>
+
+        <p class="right-footer">Tous droits réservés <span>&copy; 2025</span></p>
+
+    </footer>
+
 </body>
 </html>
