Modification des images

--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
     
     <section class="home-section">
         <div class="left">
-            <img class="left-image1" src="./images/image1.jpg" alt="">
-            <img class="left-image2" src="./images/image2.jpg" alt="">
+            <img class="left-image1" src="./images/img.jpg" alt="">
+            <img class="left-image2" src="./images/img2.jpg" alt="">
         </div>
 
         <div class="right">
@@ -86,48 +86,40 @@
         <div class="galerie">
             <div class="images">
 
-                <img src="./images/Dakar.jpeg" alt="">
+                <img src="./images/France.jpg" alt="">
                 <div class="description">
-                    <h1>Dakar</h1>
+                    <h1>France</h1>
                     <p>Lorem ipsum dolor sit amet consectetur!</p>
                 </div>
             </div>
 
             <div class="images">
 
-                <img src="./images/thies.jpeg" alt="">
+                <img src="./images/Egypt.jpg" alt="">
                 <div class="description">
-                    <h1>Thies</h1>
+                    <h1>Egypt</h1>
                     <p>Lorem ipsum dolor sit amet consectetur!</p>
                 </div>
             </div>
 
             <div class="images">
 
-                <img src="./images/touba.jpeg" alt="">
+                <img src="./images/Canada.jpg" alt="">
                 <div class="description">
-                    <h1>Touba</h1>
+                    <h1>Canada</h1>
                     <p>Lorem ipsum dolor sit amet consectetur!</p>
                 </div>
             </div>
 
             <div class="images">
 
-                <img src="./images/zic.jpeg" alt="">
+                <img src="./images/South-Africa.jpg" alt="">
                 <div class="description">
-                    <h1>Ziginchor</h1>
+                    <h1>South Africa</h1>
                     <p>Lorem ipsum dolor sit amet consectetur!</p>
                 </div>
             </div>
 
-            <div class="images">
-
-                <img src="./images/tiv.jpeg" alt="">
-                <div class="description">
-                    <h1>Tivaoune</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur!</p>
-                </div>
-            </div>
 
         </div>
     </section>
@@ -138,9 +130,9 @@
 
         <div class="box-list">
             <div class="box">
-                <img src="./images/goree.jpeg" alt="">
+                <img src="./images/img4.jpg" alt="">
                 <div class="description">
-                    <h2>Ile de goree</h2>
+                    <h2>Paris, ile de france, France</h2>
                     <p class="rating"> <i class="fa-solid fa-star"></i> 4.7</p>
                     <div class="button-description">
                         <span>
@@ -155,9 +147,9 @@
             </div>
 
             <div class="box">
-                <img src="./images/saloum.jpeg" alt="">
+                <img src="./images/img5.jpg" alt="">
                 <div class="description">
-                    <h2>Ile Saloum</h2>
+                    <h2>Cape town, Afrique du Sud</h2>
                     <p class="rating"> <i class="fa-solid fa-star"></i> 4.7</p>
                     <div class="button-description">
                         <span>
@@ -172,9 +164,9 @@
             </div>
 
             <div class="box">
-                <img src="./images/lac.jpeg" alt="">
+                <img src="./images/img6.jpg" alt="">
                 <div class="description">
-                    <h2>Lac Rose</h2>
+                    <h2>Kigali, Rwanda</h2>
                     <p class="rating"> <i class="fa-solid fa-star"></i> 4.7</p>
                     <div class="button-description">
                         <span>
