Modification de la page d'acceuil

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
         </div>
     </section>
 
-    <section class="best">
+    <section class="best">_
         <h1 class="titre">Explorer les top destinations</h1>
         <p class="small-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis eligendi provident natus error veniam deleniti dolore consequatur voluptatem accusantium dicta.</p>
 
