Ajout de la deuxieme menu et son styles

--- a/index.html
+++ b/index.html
@@ -65,6 +65,24 @@
 
     </section>
 
+    <section class="menu2">
+        <div class="box-menu">
+            <i class="fa-solid fa-plane"></i>
+            <a href="">Vols</a>
+        </div>
+
+        <div class="box-menu">
+            <i class="fa-solid fa-hotel"></i>
+            <a href="">Hotels</a>
+        </div>
+
+        <div class="box-menu">
+            <i class="fa-solid fa-car"></i>
+            <a href="">Voitures</a>
+        </div>
+
+    </section>
+
     <section class="destinations">
         <h1 class="titre">Top Destinations</h1>
 
