Ajout de la partie temoignage

--- a/index.html
+++ b/index.html
@@ -206,6 +206,46 @@
 
     </section>
 
+    <section class="temoignage">
+        <h1 class="titre">Ce que disent nos clients</h1>
+
+        <div class="box-temoignage">
+            <div class="temoignage-box">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quidem.</p>
+                <div class="client-info">
+                    <img src="./images/assane.png" alt="">
+                    <div class="client-text">
+                        <h3>Assane Ndong FALL</h3>
+                        <span>Voyageur</span>
+                    </div>
+                </div>
+            </div>
+
+            <div class="temoignage-box">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quidem.</p>
+                <div class="client-info">
+                    <img src="./images/assane.png" alt="">
+                    <div class="client-text">
+                        <h3>Jane Smith</h3>
+                        <span>Touriste</span>
+                    </div>
+                </div>
+            </div>
+
+            <div class="temoignage-box">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quidem.</p>
+                <div class="client-info">
+                    <img src="./images/assane.png" alt="">
+                    <div class="client-text">
+                        <h3>Mike Johnson</h3>
+                        <span>Aventurier</span>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </section>
+
     <section class="email">
         <h1 class="titre">Inscrivez-vous à notre newsletter</h1>
 
